# librarybench

./: .gitignore  CC_INSTRUCTIONS.md  CLAUDE.md  PERSONAS_README.md  README.md  REFACTOR.md  REFACTOR_INSTRUCTIONS.md  REFACTOR_OLD.md  agent.py  app.py  check_projects.py  claude_datastructure_solutions.json  claude_datastructure_solutions_execution_results.json  claude_search_solutions.json  claude_search_solutions_execution_results.json  compare_model_improvements.py  compute_dataset_metrics.py  evaluate_solutions.py  examine_taco.py  execute_taco_solutions.py  generate.sh  generate_repos_for_refactor.sh  generate_results_latex_table.py  hello.py  iterative_repair.py  llm_repo_refactor.py  model_feedback.py  o3mini_search_solutions.json  prompts.py  pyproject.toml  reorganize.py  repo_links_large.csv  repo_links_opus4.csv  repo_similarity.py  score.py  score.sh  summary_improved_o3_mini_chess_solutions.json  taco_solution_generator.py  test_execution.py
projects/archive_file_manager/archive_file_manager_legal/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json  setup.py
projects/archive_file_manager/archive_file_manager_legal/tests/: __init__.py  conftest.py  test_cross_reference.py  test_edge_cases.py  test_hierarchical_structure.py  test_integration.py  test_models.py  test_ocr_integration.py  test_performance.py  test_redaction_compression.py  test_table_of_contents.py
projects/binary_file_format_parser/binary_file_format_parser_audio_researcher/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json  setup.py
projects/binary_file_format_parser/binary_file_format_parser_audio_researcher/tests/: __init__.py  conftest.py  test_advanced_features.py  test_codec_extractor.py  test_core.py  test_edge_cases.py  (+6 more)
projects/code_dependency_analyzer/code_dependency_analyzer_legacy-modernizer/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json  setup.py
projects/code_dependency_analyzer/code_dependency_analyzer_performance-engineer/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json  setup.py
projects/command_line_task_manager/command_line_task_manager_researcher/: CHANGES.md  INSTRUCTIONS.md  LIBRARYBENCH_metrics.json  README.md  pyproject.toml  pytest_results.json  report.json  run_tests.py
projects/command_line_task_manager/unified/: LIBRARYBENCH_metrics.json  PLAN.md  README.md  cli_demo.py  cli_persistent.py  conftest.py  demo_persistent.py  pyproject.toml  refactoring_summary.json  report.json  run_cli.py  setup.py  tasks.json  tasks.py
projects/concurrent_task_scheduler/concurrent_task_scheduler_scientific_computing/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json
projects/concurrent_task_scheduler/unified/: LIBRARYBENCH_metrics.json  PLAN.md  README.md  REFACTOR.md  REFACTOR_SUMMARY.md  conftest.py  migration_plan.md  pyproject.toml  report.json  setup.py
projects/data_migration_framework/data_migration_framework_compliance_auditor/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json
projects/file_system_analyzer/file_system_analyzer_db_admin/: .coverage  INSTRUCTIONS.md  pyproject.toml  pytest_results.json
projects/file_system_analyzer/unified/: .coverage  .report.json  INSTRUCTIONS_security_auditor.md  LIBRARYBENCH_metrics.json  PLAN.md  README.md  TEST_ISSUES.md  conftest.py  pyproject.toml  report.json  setup.py
projects/http_api_mock_server/http_api_mock_server_microservices/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json  run_tests.py  run_unit_tests.py  setup.py
projects/in_memory_database/in_memory_database_machine_learning_engineer/: INSTRUCTIONS.md  README.md  pyproject.toml
projects/in_memory_database/in_memory_database_ml_engineer/: INSTRUCTIONS.md  pyproject.toml
projects/in_memory_database/in_memory_database_mobile_app_developer/: INSTRUCTIONS.md  README.md  pyproject.toml  run_tests.py
projects/in_memory_database/in_memory_database_mobile_developer/: .report.json  INSTRUCTIONS.md  pyproject.toml  pytest_results.json  setup.py
projects/in_memory_database/unified/: INSTRUCTIONS_ml_engineer.md  LIBRARYBENCH_metrics.json  PLAN.md  README.md  conftest.py  pyproject.toml  report_summary.json  setup.py
projects/incremental_backup_system/unified/: LIBRARYBENCH_metrics.json  PLAN.md  README.md  REFACTOR.md  conftest.py  pyproject.toml  report.json  setup.py
projects/memory_profiler_tool/memory_profiler_tool_embedded_engineer/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json
projects/memory_profiler_tool/memory_profiler_tool_game_developer/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json  setup.py
projects/personal_finance_tracker/unified/: INSTRUCTIONS_socially_responsible_investor.md  LIBRARYBENCH_metrics.json  PLAN.md  README.md  conftest.py  pyproject.toml  report.json  setup.py
projects/personal_knowledge_management/personal_knowledge_management_academic_researcher/: .coverage  INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json  requirements.txt  setup.py
projects/personal_knowledge_management/personal_knowledge_management_product_manager/: .coverage  INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json
projects/personal_knowledge_management/unified/: .coverage  .report.json  LIBRARYBENCH_metrics.json  PLAN.md  README.md  conftest.py  pyproject.toml  report.json  setup.py
projects/process_resource_monitor/process_resource_monitor_k8s_engineer/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json
projects/query_language_interpreter/unified/: .report.json  LIBRARYBENCH_metrics.json  PLAN.md  README.md  conftest.py  migration_summary.md  pyproject.toml  report.json  setup.py
projects/template_rendering_engine/template_rendering_engine_email_marketing/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json
projects/template_rendering_engine/template_rendering_engine_report_generator/: INSTRUCTIONS.md  README.md  pyproject.toml  pytest_results.json  setup.py
timeseriesdb_o4-mini_0/climate_scientist/: pyproject.toml  test_climate_engine.py
(+8971 files in other folders)
