[project]
name = "librarybench"
version = "0.1.0"
description = "A framework for evaluating and improving AI model solutions to coding problems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "datasets>=3.3.2",
    "huggingface-hub[hf-transfer]>=0.29.1",
    "ipdb>=0.13.13",
    "openai>=1.65.3",
    "pyright>=1.1.396",
    "ruff>=0.9.9",
    "tqdm>=4.67.1",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "streamlit>=1.43.1",
    "tiktoken>=0.9.0",
    "bm25s>=0.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/librarybench"]

[tool.ruff]
line-length = 88
target-version = "py311"
