[tool.poetry]
name = "climate_engine"
version = "0.1.0"
description = "A small climate data processing engine"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
numpy = "*"
matplotlib = "*"
pickle5 = { optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
