[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybinparser"
version = "0.1.0"
description = "Audio codec analysis tool for binary format parsing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-json-report>=1.5.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]