[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchtrack"
version = "0.1.0"
description = "Command-line task manager for academic researchers"
authors = [
    {name = "Research Track Team"}
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "pytest>=7.0.0",
    "pytest-json-report>=1.5.0",
    "pybtex",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pyright",
    "ruff",
]

[tool.setuptools]
packages = ["researchtrack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--json-report --json-report-file=report.json"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N"]
ignore = []

[tool.pyright]
include = ["researchtrack"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.10"
