[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-command_line_task_manager"
version = "0.1.0"
description = "Unified libraries for command_line_task_manager with original package names preserved"
requires-python = ">=3.8"
dependencies = ["pydantic>=2.0.0", "typing-extensions>=4.0.0", "pytest>=7.0.0", "pytest-json-report>=1.5.0", "cryptography>=41.0.0", "pycryptodome>=3.18.0", "python-jose>=3.3.0", "jinja2>=3.0.0"]

[project.optional-dependencies]
dev = ["black", "isort", "mypy", "pyright", "ruff", "pytest>=7.0.0", "pytest-benchmark>=4.0.0", "pytest-json-report>=1.5.0"]

[tool.setuptools]
packages = ["common", "securetask", "researchtrack"]

[tool.pytest]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--json-report --json-report-file=report.json"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N"]
ignore = []

[tool.pyright]
include = ["researchtrack"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.10"
