[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-concurrent_task_scheduler"
version = "0.1.0"
description = "Unified libraries for concurrent_task_scheduler with original package names preserved"
requires-python = ">=3.8"
dependencies = ["numpy>=1.20.0", "pandas>=1.3.0", "scikit-learn>=1.0.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-json-report>=1.5.0"]
dev = ["black>=23.0.0", "ruff>=0.0.270", "pyright>=1.1.308"]

[tool.setuptools]
packages = ["common", "render_farm_manager", "concurrent_task_scheduler"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.8"
reportMissingImports = true
reportMissingTypeStubs = false
