[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-file_system_analyzer"
version = "0.1.0"
description = "Unified libraries for file_system_analyzer with original package names preserved"
requires-python = ">=3.8"
dependencies = ["pydantic>=2.0.0", "cryptography>=40.0.0", "xxhash>=3.0.0", "python-magic>=0.4.24", "pytz"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-json-report>=1.5.0", "ruff>=0.0.240", "pyright>=1.1.300"]

[tool.setuptools]
packages = ["common", "file_system_analyzer_db_admin", "file_system_analyzer"]

[tool.pytest]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=file_system_analyzer_db_admin"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.8"
