[project]
name = "in-memory-database-machine-learning-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "justinchiu-cohere", email = "justinchiu@cohere.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
