[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "in_memory_database_mobile_app_developer"
version = "0.1.0"
description = "MobileSyncDB: In-Memory Database for Mobile App Backend Synchronization"
authors = [
    {name = "Miguel Sync Developer", email = "miguel@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "msgpack>=1.0.5",
    "zstandard>=0.21.0",
    "lz4>=4.3.2",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "aiohttp>=3.8.5",
    "cryptography>=41.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.270",
    "pyright>=1.1.315",
    "black>=23.3.0",
]

[tool.setuptools]
packages = ["in_memory_database_mobile_app_developer"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "B", "I", "N", "W", "D"]
ignore = ["D100", "D104", "D107", "D200", "D203", "D212"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D103"]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.8"
typeCheckingMode = "basic"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportMissingImports = true
reportMissingTypeStubs = false