[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncdb"
version = "0.1.0"
description = "In-Memory Database with Mobile Synchronization"
authors = [
    {name = "Miguel Mobile Developer"}
]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-json-report",
]

[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "RUF", "ERA", "PL"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.pyright]
include = ["syncdb", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"
pythonVersion = "3.8"