[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-in_memory_database"
version = "0.1.0"
description = "Unified libraries for in_memory_database with original package names preserved"
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest", "pytest-json-report", "pytest>=7.0.0", "pytest-json-report>=1.5.0"]

[tool.setuptools]
packages = ["common", "vectordb", "syncdb"]

[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "RUF", "ERA", "PL"]
ignore = []

[tool.pytest]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.pyright]
include = ["syncdb", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"
pythonVersion = "3.8"
