[project]
name = "pymemtrace"
version = "0.1.0"
description = "A specialized memory profiling tool designed for game developers working with Python game engines"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "pytest-json-report>=1.5.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"