[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic_knowledge_vault"
version = "0.1.0"
description = "A specialized personal knowledge management system tailored for academic researchers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-json-report",
    "markdown>=3.4.0",
    "python-dateutil>=2.8.2",
    "bibtexparser>=1.4.0",
    "networkx>=2.8.0",
    "PyPDF2>=2.12.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "mypy>=0.971",
    "ruff>=0.0.262",
    "pyright",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-json-report",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 88
target-version = "py38"
