[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product_insight"
version = "0.1.0"
description = "Strategic Product Knowledge Management System for product managers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "nltk>=3.6.0",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.1",
    "pyright>=0.0.1",
]

[tool.setuptools]
packages = ["product_insight"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
