[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-personal_knowledge_management"
version = "0.1.0"
description = "Unified libraries for personal_knowledge_management with original package names preserved"
requires-python = ">=3.8"
dependencies = ["numpy", "scikit-learn", "pandas", "nltk", "pydantic", "pydantic>=2.5.0", "pypdf>=3.17.0", "bibtexparser>=1.4.0", "pybtex>=0.24.0", "markdown>=3.5.1", "fastapi>=0.104.1", "uvicorn>=0.24.0", "rich>=13.6.0", "tqdm>=4.66.1", "pyarrow>=14.0.0", "pandas>=2.1.2", "networkx>=3.2.1", "python-multipart>=0.0.6", "pyyaml>=6.0.1", "jinja2>=3.1.2"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-json-report"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "black>=23.10.0", "ruff>=0.1.3", "pyright>=1.1.333"]

[tool.setuptools]
packages = ["common", "productmind", "researchbrain"]

[tool.pytest]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
minversion = "6.0"
addopts = "--cov=researchbrain --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "C90", "B"]
ignore = []

[tool.pyright]
include = ["researchbrain"]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "All"

[tool.black]
line-length = 88
target-version = ["py310"]
