[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-resource-monitor"
version = "0.1.0"
description = "Kubernetes-native resource monitoring library for platform engineers"
authors = [{name = "Platform Engineering Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "kubernetes>=28.1.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-json-report>=1.5.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
k8s-monitor = "k8s_resource_monitor.cli:main"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "strict"