[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-query_language_interpreter"
version = "0.1.0"
description = "Unified libraries for query_language_interpreter with original package names preserved"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["common", "privacy_query_interpreter", "legal_discovery_interpreter"]
