[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytemplate"
version = "0.1.0"
description = "A specialized template rendering engine for creating personalized email campaigns"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PyTemplate Team", email = "team@pytemplate.example.com"}
]
keywords = ["email", "template", "marketing", "campaign", "personalization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.0",
    "lxml>=4.9",
    "cssutils>=2.6",
    "beautifulsoup4>=4.12",
    "html2text>=2020.1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-json-report>=1.5",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.8"