[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytemplate"
version = "0.1.0"
description = "A template rendering engine for automated business report generation"
requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.0",
    "sqlalchemy>=2.0",
    "pandas>=1.3",
    "matplotlib>=3.3",
    "seaborn>=0.11",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.0",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "pytest-json-report>=1.5",
    "black>=22.0",
    "ruff>=0.0.250",
    "pyright>=1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT", "SIM", "TID"]
ignore = ["E501", "B008"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.8"